* New: Change Line of Fire colours by attack direction.
* New: Change arc colour of facing indicators.
* New: Change color of floating armor bar.
* New: Show ammo count in paper doll tooltip.
* New: Balanced ammo usage to reduce chance of ammo explosion.
* New: Auto Jettsion Ammo when they are useless.
* New: Customise list and order of ranged attack modifiers, fixing inconsistency.
* New: Directional attack modifier - get accuracy bonus for attacking from side or rear.
* New: Attack Log now logs Round and Phase.
* Mod: New logging code that formats and write logs in the background and will not cause the game to lag.
* Mod: Attack logs are now automatically archived, with a total size limit also managed in the background.
* Fix: Hit Location fix now modifies hit tables instead of totally overwriting GetHitLocation.
* Fix: A few resources are now cleared on combat end to reduce memory leak.

2018-07-27 AIM Version 2.0 for BATTLETECH 1.1.2

* Big: Settings migrated to settings.json and is automatically updated by the mod.
* New: Unlock hit accuracy's 5% step and make odd gunnery useful.
* New: Show current and projected heat and stability number in selection panel and target panel.
* New: Fix and allow to-hit modifier to be a net bonus, instead of capping at no penalty.
* New: Allow height modifier to be net penalty, instead of capping at no bonus.
* New: Display base hit chance of ranged and melee attack and the relevant stat.
* New: Fix Multi-Target back out.
* New: Fix rear armour structure display, and show structural damage through armour.
* New: Fix Grey Head Disease, spread by headshot immune unit to all mechs until load game or restart.
* New: Fix the bug that parts and units has a very low chance to be zombified at 0 HP.
* New: Make sure walk and jump result in same LOS quality (clear/blocked/indirect/none).
* New: Change Line of Fire colours, style (solid/dotted), and width.
* New: Refine (or rough up / flatten) indirect firing arc and jump arc.